<resources>
    <string name="app_name">TasarimCalismasi</string>
    <string name="pizzaBaslik">Beef Cheese</string>
    <string name="peynirYazi">cheese</string>
    <string name="sucukYazi">sausage</string>
    <string name="zeytinYazi">olive</string>
    <string name="biberYazi">pepper</string>
    <string name="teslimatSure">20min</string>
    <string name="teslimatBaslık">Delivery</string>
    <string name="pizzaAciklama">meat lover,get ready to meet your pizza!</string>
    <string name="fiyatYazi">$5.98</string>
    <string name="buttonYazi">ADD TO CART</string>
</resources>